feat: 完成 DDD 模块化迁移